--- a/Project_02/css/style.css
+++ b/Project_02/css/style.css
@@ -52,12 +52,12 @@
     
     section.cover-form {
         width: 100%;
-        padding: 0 2%;
     }
     
     .bg {
+        position: relative;
         background-image: url("../imagem/bg-form.jpg");
-        height: 500px;
+        height: 560px;
         background-size: cover;
         background-position: center;
     }
@@ -65,13 +65,13 @@
     /* iniciando formulario */
     
     .form-container {
-        width: 300px;
-        height: 110%;
+        position: absolute;
+        right: 30px;
+        top: -2.5%;
+        width: 400px;
+        height: 105%;
         background-color: rgba(234, 236, 239, 0.7);
-        float: right;
         margin-right: 40px;
-        position: relative;
-        top: -5%;
         box-shadow: 1px 1px 1px 1px rgb(94, 93, 93);
         z-index: 2;
     }
@@ -95,9 +95,10 @@
     }
     
     .form-container form input[type="text"] {
+        margin-top: 5px;
         width: 100%;
-        height: 30px;
-        line-height: 30px;
+        height: 40px;
+        line-height: 35px;
         padding-left: 10px;
         border: 1px solid #ccc;
     }
@@ -122,34 +123,100 @@
     /* **************** */
     /* iniciando a chamada*/
     
-    .sla {
-        background-color: #D6D6D6;
-        padding: 10px 2% 10px 2%;
-    }
-    
     section.chamada {
+        z-index: 1;
         width: 100%;
         text-align: center;
-        display: inline-block;
-        position: relative;
-        top: -50px;
-        z-index: 1;
     }
     
     section.chamada>.container {
+        padding: 40px 0px 40px 0px;
         background-color: rgb(199, 199, 199);
-        padding: 40px;
     }
     
-    .chamada h2 {
+    section.chamada h2 {
         color: rgb(83, 50, 50);
         font-weight: normal;
-        font-size: 30px;
-        display: inline-block;
-        width: 80%;
+        font-size: 24px;
+        width: 96%;
         max-width: 700px;
+        display: inline-block;
+    }
+    
+    section.chamada p {
+        color: rgb(83, 50, 50);
+        font-size: 18px;
+        width: 96%;
+        max-width: 700px;
+        display: inline-block;
+        margin-top: 10px;
     }
     /**********/
+    /* iniciando mosaico */
+    
+    .mosaico-flex {
+        display: flex;
+    }
+    
+    .item-1-mosaico {
+        background-position: center;
+        background-size: cover;
+        width: 60%;
+    }
+    
+    .item-2-mosaico {
+        width: 40%;
+        padding: 60px 40px;
+        background-color: rgb(65, 124, 192);
+    }
+    /* ************* */
+    
+    @media screen and (max-width: 768px) {
+        .mosaico-flex {
+            display: block;
+        }
+        .item-1-mosaico {
+            width: 100%;
+            padding-top: 80%;
+        }
+        .item-2-mosaico {
+            text-align: justify;
+            width: 100%;
+        }
+    }
+    /***************/
+    
+    footer {
+        width: 79%;
+        margin: 0 auto;
+        padding: 20px;
+        text-align: center;
+        background-color: rgb(199, 199, 199);
+    }
+    
+    footer img {
+        width: 150px;
+    }
+    
+    footer p {
+        padding-top: 10px;
+    }
+    
+    @media screen and (max-width: 960px) {
+        .bg {
+            text-align: center;
+            height: auto;
+            padding: 40px 0px;
+        }
+        .form-container {
+            position: static;
+            display: inline-block;
+            height: auto;
+            width: 96%;
+            max-width: 400px;
+        }
+    }
+    /******************/
     
     @media screen and (max-width: 510px) {
         header {
@@ -162,3 +229,4 @@
             /*padding: 0 90px;*/
         }
     }
+    /******************/
