--- a/Project_03/css/style.css
+++ b/Project_03/css/style.css
@@ -17,6 +17,7 @@ body {
 header {
     width: 100%;
     height: 90vh;
+    min-height: 800px;
     /* max-height: 700px; */
     padding: 40px 2%;
     background-image: url('../imagem/capa.png');
@@ -42,6 +43,43 @@ header nav {
 
 nav.mobile-menu {
     display: none;
+    width: 32px;
+    height: 32px;
+    background-image: url('../imagem/menu.png');
+    background-size: 100% 100%;
+    cursor: pointer;
+}
+
+nav.mobile-menu:hover ul {
+    opacity: 1;
+}
+
+nav.mobile-menu ul {
+    position: absolute;
+    left: 0;
+    top: 80px;
+    width: 100%;
+    /* padding: 20px 0; */
+    /* color: white; */
+    list-style-type: none;
+    background-color: white;
+    text-align: center;
+    opacity: 0;
+    transition: 1s;
+}
+
+nav.mobile-menu ul li {
+    border-bottom: 1px solid black;
+    padding: 8px 0;
+}
+
+nav.mobile-menu ul li:hover {
+    background-color: rgb(214, 211, 211);
+}
+
+nav.mobile-menu ul li a {
+    text-decoration: none;
+    color: black;
 }
 
 header nav.desktop-menu ul {
@@ -168,6 +206,83 @@ section.sessao1 .container {
 
 /* **************** */
 
+
+/* iniciando sessao 2 */
+
+section.sessao2 {
+    padding-left: 2%;
+    padding-right: 2%;
+    background-color: white;
+    text-align: center;
+}
+
+.sessao2 .container {
+    max-width: 1000px;
+}
+
+.sessao2 {
+    color: #472663;
+    font-weight: 300;
+}
+
+.sessao2 p {
+    margin-top: 30px;
+    max-width: 900px;
+    display: inline-block;
+}
+
+.sessao2 img {
+    width: 100%;
+    margin-top: 40px;
+}
+
+
+/* ****************** */
+
+
+/* media queri de 900px */
+
+@media screen and (max-width: 900px) {
+    .sessao-device1 {
+        height: 340px;
+    }
+    section.sessao1 {
+        height: 310px;
+    }
+}
+
+
+/* *************** */
+
+
+/* media queri de 830px */
+
+@media screen and (max-width: 830px) {
+    .chamada1 {
+        text-align: center;
+        float: none;
+        margin: 100px 0;
+        max-width: none;
+        width: 100%;
+    }
+    .chamada1 h2 {
+        font-weight: 300;
+        font-size: 30px;
+        padding: 60px 10px 0px 10px;
+    }
+    .chamada1 p {
+        font-size: 15px;
+        color: wheat;
+        margin-top: 10px;
+    }
+}
+
+
+/* **************** */
+
+
+/* media queri 768px */
+
 @media screen and (max-width: 768px) {
     header {
         width: 100%;
@@ -180,23 +295,6 @@ section.sessao1 .container {
     }
     nav.mobile-menu {
         display: block;
-    }
-    .chamada1 {
-        text-align: center;
-        float: none;
-        margin: 100px 0;
-        max-width: none;
-        width: 100%;
-    }
-    .chamada1 h2 {
-        font-weight: 300;
-        font-size: 30px;
-        padding: 0 10px;
-    }
-    .chamada1 p {
-        font-size: 15px;
-        color: wheat;
-        margin-top: 10px;
     }
     .sessao1 {
         padding: 40px 2%;
@@ -211,6 +309,9 @@ section.sessao1 .container {
         display: inline-block;
         padding-left: 0px;
     }
+    .sessao-texto1 h2 {
+        padding-top: 10px;
+    }
     .sessao-texto1 ul {
         display: inline-block;
         margin-top: 20px;
@@ -218,13 +319,23 @@ section.sessao1 .container {
     .sessao-texto1 ul li {
         float: none;
         text-align: left;
+        padding-top: 10px;
     }
     .btn1-texto {
         display: block;
-        margin: 20px auto 0 auto;
+        margin: 40px auto 0 auto;
         float: none;
     }
     .sessao-device1 {
         display: none;
     }
+    .sessao2 {
+        padding-top: 40px 2%;
+    }
+    .sessao2 h2 {
+        padding-top: 10px;
+    }
 }
+
+
+/* ************* */
