--- a/Project_04/style.css
+++ b/Project_04/style.css
@@ -1,178 +1,380 @@
-        * {
-            margin: 0;
-            padding: 0;
-            box-sizing: border-box;
-            font-family: 'Montserrat';
-        }
-        
-        html,
-        body {
-            height: 100%;
-        }
-        
-        .clear {
-            clear: both;
-        }
-        
-        .container {
-            max-width: 1280px;
-            width: 100%;
-            margin: 0 auto;
-            padding: 0 2%;
-        }
-        /* AQUI ESTAMOS EDITANDO O CABEÇALHO DO SITE */
-        
-        header {
-            padding-bottom: 10px;
-        }
-        
-        header .logo img {
-            padding-top: 20px;
-            float: left;
-            width: 250px;
-        }
-        /* isso aki vai impedir q o conteudo fique de tras para frente */
-        
-        header nav {
-            float: right;
-            text-transform: uppercase;
-        }
-        /* ** */
-        
-        header ul {
-            padding-top: 25px;
-        }
-        
-        header li {
-            float: left;
-            padding-left: 50px;
-            list-style-type: none;
-        }
-        
-        header .lista a {
-            font: normal 15px;
-            color: black;
-            text-decoration: none;
-        }
-        /* FIM DA EDIÇÃO DO CABEÇALHO */
-        /* INICIANDO MOSAICO */
-        
-        section.mosaico .mosaico-box {
-            float: left;
-            width: calc(100% / 6);
-        }
-        
-        section.mosaico .mosaico-img {
-            /* background-image: url(''); */
-            background-color: rgb(194, 192, 192);
-            padding: 50% 0;
-            border: 3px solid white;
-        }
-        /* ******* */
-        /* RESUMO DOS SERVIÇOS EM CAIXA */
-        
-        section.servico .servico-box {
-            display: flex;
-            max-width: 1000px;
-            width: 100%;
-            height: auto;
-            text-align: center;
-            align-items: center;
-            position: relative;
-            top: -30px;
-            margin: 0 auto;
-            padding: 0 2%;
-        }
-        
-        section.servico .servico-txt:nth-of-type(1) {
-            padding: calc(5%/2.5) 1%;
-            /* padding: 40px 15px; */
-            background-color: rgb(116, 144, 180);
-            background-image: url('imagens/icone_dente.png');
-            background-size: 18px 18px;
-            background-repeat: no-repeat;
-            background-position: center bottom 5px;
-        }
-        
-        section.servico .servico-txt:nth-of-type(2) {
-            padding: calc(5% - 15px) 2%;
-            /* padding: 60px 15px; */
-            background-color: rgb(148, 182, 226);
-        }
-        
-        section.servico .servico-txt:nth-of-type(3) {
-            padding: calc(5%/2.5) 1%;
-            /* padding: 40px 15px; */
-            background-color: rgb(116, 144, 180);
-            background-image: url('imagens/icone_dente.png');
-            background-size: 18px 18px;
-            background-repeat: no-repeat;
-            background-position: center bottom 5px;
-        }
-        
-        Section.servico .servico-txt h2 {
-            margin: 0 auto;
-            width: 70%;
-        }
-        
-        Section.servico .servico-txt p {
-            margin: 0 auto;
-            width: 80%;
-            font: normal 20px;
-            padding-bottom: 10px;
-        }
-        /* ********* */
-        /* EDITANDO O CONTEUDO DE PERFIL */
-        
-        .section.perfil-container>.container {
-            max-width: 100px;
-            width: 100%;
-            align-items: center;
-        }
-        
-        section.perfil-container .perfil-box {
-            display: flex;
-            width: 100%;
-            height: 100%;
-            text-align: center;
-            position: relative;
-            padding: 0 2%;
-        }
-        
-        section.perfil-img {
-            width: 150%;
-            height: 100%;
-        }
-        
-        section.perfil-container .perfil-txt {
-            padding-left: 5%;
-        }
-        
-        section.perfil-container .perfil-txt h2 {
-            padding: 10px 0;
-        }
-        
-        section.perfil-container .perfil-txt p {
-            font: normal 16px;
-            text-align: justify;
-            white-space: initial;
-        }
-        /* **************** */
-        
-        @media screen and (max-width :800px) {
-            section.perfil-container .perfil-box {
-                display: inline-block;
-            }
-            section.perfil-container img {
-                width: 50%;
-                height: 100%;
-                margin: 0 auto;
-            }
-            section.perfil-container .perfil-img {
-                padding-right: 0px;
-            }
-            section.perfil-container .perfil-txt {
-                width: 100%;
-                padding-left: 0px;
-            }
-        }
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: 'Montserrat';
+}
+
+html,
+body {
+    height: 100%;
+}
+
+.clear {
+    clear: both;
+}
+
+.container {
+    max-width: 1400px;
+    width: 100%;
+    margin: 0 auto;
+    /* padding: 0 2%; */
+}
+
+
+/* AQUI ESTAMOS EDITANDO O CABEÇALHO DO SITE */
+
+header {
+    padding-bottom: 10px;
+}
+
+header .logo img {
+    padding-top: 20px;
+    float: left;
+    width: 250px;
+}
+
+
+/* isso aki vai impedir q o conteudo fique de tras para frente */
+
+header nav.menu-desktop {
+    float: right;
+    text-transform: uppercase;
+}
+
+
+/* ******* */
+
+header nav.menu-desktop ul {
+    padding-top: 25px;
+}
+
+header nav.menu-desktop ul li {
+    float: left;
+    padding-left: 50px;
+    list-style-type: none;
+}
+
+header nav.menu-desktop .lista a,
+nav.menu-mobile .lista a {
+    font: normal 15px;
+    color: black;
+    text-decoration: none;
+}
+
+
+/* menu-mobile */
+
+nav.menu-mobile {
+    float: right;
+    width: 28px;
+    height: 28px;
+    margin-top: 20px;
+    background-image: url('../Project_04/imagens/menu-mobile.png');
+    background-size: 100% 100%;
+    display: none;
+    cursor: pointer;
+}
+
+nav.menu-mobile ul {
+    z-index: 10;
+    text-align: center;
+    position: absolute;
+    width: 100%;
+    left: 0%;
+    top: 73px;
+    background-color: white;
+    display: none;
+}
+
+header nav.menu-mobile ul li {
+    padding: 10px 0;
+    list-style-type: none;
+    text-transform: uppercase;
+}
+
+
+/* FIM DA EDIÇÃO DO CABEÇALHO */
+
+
+/* INICIANDO MOSAICO */
+
+section.mosaico .mosaico-box {
+    float: left;
+    width: calc(100% / 6);
+}
+
+section.mosaico .mosaico-img {
+    /* background-image: url(''); */
+    background-color: rgb(194, 192, 192);
+    padding: 50% 0;
+    border: 3px solid white;
+}
+
+
+/* ******* */
+
+
+/* RESUMO DOS SERVIÇOS EM CAIXA */
+
+section.servico .servico-box {
+    display: flex;
+    max-width: 1000px;
+    width: 100%;
+    height: auto;
+    text-align: center;
+    align-items: center;
+    position: relative;
+    top: -30px;
+    margin: 0 auto;
+    padding: 0 2%;
+}
+
+section.servico .servico-txt:nth-of-type(1) {
+    padding: calc(5%/2.5) 1%;
+    /* padding: 40px 15px; */
+    background-color: rgb(116, 144, 180);
+    background-image: url('imagens/icone_dente.png');
+    background-size: 18px 18px;
+    background-repeat: no-repeat;
+    background-position: center bottom 5px;
+}
+
+section.servico .servico-txt:nth-of-type(2) {
+    padding: calc(5% - 15px) 2%;
+    /* padding: 60px 15px; */
+    background-color: rgb(148, 182, 226);
+}
+
+section.servico .servico-txt:nth-of-type(3) {
+    padding: calc(5%/2.5) 1%;
+    /* padding: 40px 15px; */
+    background-color: rgb(116, 144, 180);
+    background-image: url('imagens/icone_dente.png');
+    background-size: 18px 18px;
+    background-repeat: no-repeat;
+    background-position: center bottom 5px;
+}
+
+Section.servico .servico-txt h2 {
+    margin: 0 auto;
+    /* width: 70%; */
+}
+
+Section.servico .servico-txt p {
+    margin: 0 auto;
+    width: 100%;
+    font: normal 20px;
+    padding-bottom: 10px;
+}
+
+
+/* ********* */
+
+
+/* EDITANDO O CONTEUDO DE PERFIL */
+
+section.perfil-containe {
+    padding: 40px 0;
+}
+
+section.perfil-container>.container {
+    max-width: 800px;
+}
+
+section.perfil-container .sei-la {
+    position: relative;
+    padding-top: 60%;
+}
+
+section.perfil-container .perfil-box {
+    display: flex;
+    width: 100%;
+    height: 100%;
+    align-items: center;
+    position: absolute;
+    top: 0;
+    left: 0;
+}
+
+section.perfil-container .perfil-img {
+    width: 40%;
+    height: 100%;
+    background-image: url('../Project_04/imagens/img_perfil.png');
+    background-size: 100% 100%;
+}
+
+section.perfil-container .perfil-txt {
+    width: 60%;
+    padding: 0 30px;
+}
+
+section.perfil-container .perfil-txt h2 {
+    text-align: left;
+    font-size: 18px;
+    color: rgb(86, 145, 223);
+}
+
+section.perfil-container .perfil-txt p {
+    font-size: 14px;
+    margin-top: 8px;
+}
+
+
+/* **************** */
+
+
+/* editando video */
+
+section.videos {
+    padding: 50px 0;
+}
+
+section.videos .video-box {
+    float: left;
+    width: calc(100% / 3);
+    padding-top: calc((100% / 3) * 0.6);
+    position: relative;
+    top: 0;
+    left: 0;
+    border: 15px solid white;
+}
+
+section.videos iframe {
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+}
+
+
+/* ********* */
+
+
+/* @media screen and (max-width: 1000px) {
+    section.videos .video-box {
+        float: none;
+        width: 100%;
+        padding-top: calc(100% * 0.6);
+        position: relative;
+        border: 15px solid white;
+    }
+} */
+
+
+/* ********** */
+
+@media screen and (max-width: 768px) {
+    header .logo img {
+        width: 280px;
+    }
+    header nav.menu-desktop ul {
+        padding-top: 30px;
+    }
+    header nav.menu-desktop ul>li {
+        padding-left: 25px;
+    }
+    section.servico .servico-box {
+        flex-direction: column;
+        /* width: 80%; */
+    }
+    section.servico .servico-txt:nth-of-type(1) {
+        width: 52%;
+        padding: 5% 0;
+        /* padding: 40px 15px; */
+    }
+    section.servico .servico-txt:nth-of-type(2) {
+        width: 55%;
+        padding: 9.5% 0;
+        /* margin: 0 15%; */
+    }
+    section.servico .servico-txt:nth-of-type(3) {
+        width: 50%;
+        padding: 5% 0;
+    }
+    section.perfil-container .perfil-box {
+        display: inline-block;
+        text-align: center;
+    }
+    section.perfil-container .perfil-img {
+        width: 50%;
+        padding-top: 70%;
+        display: inline-block;
+        height: auto;
+    }
+    section.perfil-container .perfil-txt {
+        display: inline-block;
+        text-align: justify;
+        width: 100%;
+        padding: 0 30px;
+    }
+    section.videos {
+        padding-top: 0;
+        text-align: center;
+    }
+    section.videos .video-box {
+        float: none;
+        display: inline-block;
+        width: 100%;
+        /* background-color: blue; */
+        border: 0;
+    }
+    section.videos iframe {
+        display: inline-block;
+        padding-top: 0%;
+        position: relative;
+        top: 0;
+        left: 0;
+    }
+}
+
+
+/* *********** */
+
+
+/* @media screen and (max-width: 600px) {
+    nav.menu-mobile {
+        display: block;
+    }
+    header nav.menu-desktop ul {
+        display: none;
+    }
+    section.servico .servico-txt:nth-of-type(1) {
+        width: 70%;
+        padding: 5% 0;
+    }
+    section.servico .servico-txt:nth-of-type(2) {
+        width: 75%;
+        padding: 9.5% 0;
+    }
+    section.servico .servico-txt:nth-of-type(3) {
+        width: 70%;
+        padding: 5% 0;
+    }
+    section.perfil-container .sei-la {
+        padding-top: 100%;
+    }
+} */
+
+
+/* ******** */
+
+@media screen and (max-width: 580px) {
+    /* section.servico .servico-txt:nth-of-type(1) {
+        width: 70%;
+        padding: 5% 0;
+    }
+    section.servico .servico-txt:nth-of-type(2) {
+        width: 75%;
+        padding: 9.5% 0;
+    }
+    section.servico .servico-txt:nth-of-type(3) {
+        width: 70%;
+        padding: 5% 0;
+    } */
+    section.perfil-container .perfil-img {
+        width: 80%;
+        padding-top: 110%;
+    }
+}
