--- a/defeito/style.css
+++ b/defeito/style.css
@@ -234,10 +234,10 @@ section.videos .video-box {
     float: left;
     width: calc(100% / 3);
     padding-top: calc((100% / 3) * 0.6);
+    border: 15px solid white;
     position: relative;
     top: 0;
     left: 0;
-    border: 15px solid white;
 }
 
 section.videos iframe {
@@ -293,6 +293,9 @@ section.videos iframe {
         width: 50%;
         padding: 5% 0;
     }
+    section.perfil-container>.container {
+        padding-bottom: 60%;
+    }
     section.perfil-container .perfil-box {
         display: inline-block;
         text-align: center;
@@ -309,21 +312,15 @@ section.videos iframe {
         width: 100%;
         padding: 0 30px;
     }
-    section.videos {
-        padding-top: 0;
-        text-align: center;
-    }
     section.videos .video-box {
-        float: none;
-        display: inline-block;
         width: 100%;
-        /* background-color: blue; */
-        border: 0;
+        padding-top: calc(100% * 0.6);
+        position: relative;
     }
     section.videos iframe {
-        display: inline-block;
-        padding-top: 0%;
-        position: relative;
+        width: 100%;
+        height: 100%;
+        position: absolute;
         top: 0;
         left: 0;
     }
@@ -361,20 +358,23 @@ section.videos iframe {
 /* ******** */
 
 @media screen and (max-width: 580px) {
-    /* section.servico .servico-txt:nth-of-type(1) {
-        width: 70%;
-        padding: 5% 0;
+    section.perfil-container>.container {
+        padding-bottom: 100%;
     }
-    section.servico .servico-txt:nth-of-type(2) {
-        width: 75%;
-        padding: 9.5% 0;
-    }
-    section.servico .servico-txt:nth-of-type(3) {
-        width: 70%;
-        padding: 5% 0;
-    } */
     section.perfil-container .perfil-img {
         width: 80%;
         padding-top: 110%;
+    }
+    section.videos .video-box {
+        width: 100%;
+        padding-top: calc(100% * 0.6);
+        position: relative;
+    }
+    section.videos iframe {
+        width: 100%;
+        height: 100%;
+        position: absolute;
+        top: 0;
+        left: 0;
     }
 }
