--- a/order-summary-component-main/style.css
+++ b/order-summary-component-main/style.css
@@ -33,7 +33,12 @@ section.Back_Box .box1 {
 
 /* ***** */
 
-section.Back_Box .img1 {
+section.Back_Box .img3 {
+    display: none;
+}
+
+section.Back_Box .img1,
+section.Back_Box .img3 {
     width: 100%;
     height: 100%;
     position: absolute;
@@ -237,6 +242,7 @@ footer .attribution {
 }
 
 footer p {
+    font-size: 13px;
     color: rgba(0, 0, 0, 0.74);
 }
 
@@ -249,22 +255,27 @@ footer a {
 /* ****** */
 
 
-/* MW 1000px */
+/* MN 1500px */
 
-@media screen and (max-width:1150px) {
-    div .buton a {
+@media screen and (min-width:1200px) {
+    section .texto p {
         width: 100%;
+        padding: 7px 15px;
+        font-size: 14px;
+    }
+    div .buton a {
         padding: 5% 15%;
     }
 }
 
 
-/* fim mw 1000px */
+/* fim MN 1500px */
 
 
-/* MW 900px */
+/* MW 1000px */
 
-@media screen and (max-width: 900px) {
+@media screen and (max-width: 1000px),
+(min-width:1000px) {
     div.single-part:nth-child(1) {
         width: 30%;
         padding: 0 0%;
@@ -278,7 +289,37 @@ footer a {
         width: 30%;
         padding: 3% 0 0 0%;
     }
+    div .buton a {
+        padding: 5% 15%;
+    }
 }
 
 
-/* fim MW 900px */
+/* fim MW 1000px */
+
+
+/* MW 860px */
+
+@media screen and (max-width: 860px) {
+    section.Back_Box .img3 {
+        width: 100%;
+        height: 80%;
+    }
+    section.Back_Box .img1 {
+        display: none;
+    }
+    section.Back_Box .img3 {
+        display: block;
+    }
+    section.espaco {
+        top: 5%;
+        left: 10%;
+        width: 80%;
+        margin: 0 auto;
+        text-align: center;
+        z-index: 2;
+    }
+}
+
+
+/* fim MW 860px */
