--- a/Calculator-Tip/Style/style.css
+++ b/Calculator-Tip/Style/style.css
@@ -11,6 +11,9 @@ body {
     height: 100%;
 }
 
+
+/* area principal */
+
 main {
     width: 100vw;
     height: 100vh;
@@ -21,23 +24,112 @@ main {
     flex-direction: column;
 }
 
+
+/* H1 */
+
 .split {
+    position: relative;
+    bottom: 10px;
     width: 90px;
     word-wrap: break-word;
     color: rgba(4, 194, 194, 0.74);
 }
 
+
+/* Area branca */
+
 .W-box {
-    max-width: 50vw;
-    max-height: 80vw;
-    width: 600px;
-    height: 350px;
+    position: relative;
+    bottom: 20px;
+    max-width: 90vw;
+    max-height: 85vw;
+    width: 850px;
+    height: 380px;
     background-color: white;
     border-radius: 10px;
+    display: flex;
+    flex-direction: row;
 }
 
-.B-box {
+
+/* regiao do formulario */
+
+.mulario {
     width: 50%;
-    height: 50%;
-    background-color: red;
+    height: 94%;
+    margin: 10px 2% 0 2%;
+    border-radius: 15px;
+    background-color: rgb(150, 150, 150);
+}
+
+
+/* bill */
+
+.bill {
+    padding: 20px 5px;
+    font-size: 20px;
+}
+
+.bill>p {
+    padding: 5px 0;
+}
+
+.bill>input {
+    width: 350px;
+    height: 40px;
+    padding-left: 5px;
+    font-size: 15px;
+    border: 3px groove aquamarine;
+}
+
+.bill>input:focus {
+    /* para não aparecer as bordas ao focar na area */
+    outline: 0;
+}
+
+
+/* botão */
+
+.botao {
+    width: 100%;
+    font-size: 20px;
+    display: flex;
+    flex-direction: column;
+}
+
+.botao>.b1,
+.botao>.b2 {
+    width: 50%;
+    padding-top: 15px;
+    margin: 0 auto;
+}
+
+.botao button {
+    width: 25%;
+    padding: 5px 0;
+    cursor: pointer;
+}
+
+.botao>.b2>input {
+    width: 25%;
+    padding: 5px 5px;
+}
+
+.botao>.b2>input:focus {
+    outline: 0;
+}
+
+
+/* ***** */
+
+
+/* Area azul */
+
+.B-box {
+    position: inherit;
+    width: 50%;
+    height: 94%;
+    margin: 10px 2% 0 2%;
+    background-color: rgb(0, 132, 255);
+    border-radius: 15px;
 }
