--- a/Calculator-Tip/Style/style.css
+++ b/Calculator-Tip/Style/style.css
@@ -41,8 +41,8 @@ main {
 .W-box {
     position: relative;
     bottom: 20px;
-    max-width: 90vw;
-    max-height: 85vw;
+    max-width: 95vw;
+    max-height: 85vh;
     width: 850px;
     height: 380px;
     background-color: white;
@@ -85,7 +85,7 @@ main {
 }
 
 .bill>input {
-    max-width: 30vw;
+    max-width: 45vw;
     width: 350px;
     height: 40px;
     padding-left: 5px;
@@ -167,7 +167,7 @@ main {
 }
 
 .pessoa>input {
-    max-width: 30vw;
+    max-width: 45vw;
     width: 350px;
     height: 40px;
     padding-left: 5px;
